integration-monday/2020-11/wcf-to-aks/kubernetes/petshop/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petshop
  labels:
    intmon: "20.11"
