integration-monday/2020-11/wcf-to-aks/kubernetes/petshop/webservice-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: petshop-webservice
  namespace: petshop
  labels:
    app: petshop
    component: webservice
spec:
  rules:
  - host: ws.petshop.sixeyed.com
    http:
      paths:
      - path: /
        backend:
          serviceName: petshop-webservice
          servicePort: 80
